Add pages for downtime

--- a/router/maintenance.html
+++ b/router/maintenance.html
@@ -135,10 +135,16 @@
 					</g>
 			</svg>
 			</div>
-			<p class="greeting-text">Hey, glad you're here. Unfortunately, our host is down right now. We should be back online soon!</p>
+			<p class="greeting-text">Hey, glad you're here. Unfortunately, we had to go offline briefly for some scheduled maintenance. We should be back online in less than an hour!</p>
 
 			<div id="text-adventure">
 				<div id="output"></div>
+			</div>
+			<div class="share-this">
+				<span>Hey, uh... Wanna share this?</span>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="@heykitsu is offline for scheduled maintenance, but still entertaining." data-show-count="false">Tweet</a>
+				<script async src="//platform.twitter.com/widgets.js"
+					charset="utf-8"></script>
 			</div>
 		</div>
 	</div>
